@@ -19,7 +19,10 @@ android {
     }
 
     testOptions {
-        unitTests.returnDefaultValues = true
+        //unitTests.returnDefaultValues = true
+        unitTests.all{
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
     }
 }
 
@@ -30,11 +33,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
 
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
 
-    compile 'com.cocosw:bottomsheet:1.+@aar'
+    compile 'com.cocosw:bottomsheet:1.3.0@aar'
 
     compile 'com.orhanobut:logger:1.15'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -44,13 +47,10 @@ dependencies {
     compile 'com.squareup.moshi:moshi:1.2.0'
 
 
-
-
-
-    /*androidTestCompile 'com.android.support:support-annotations:24.0.0'
+    androidTestCompile 'com.android.support:support-annotations:24.2.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+   /* androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'*/
 }
